welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:15: error: not found: value Direction
  setDirection(Direction.EAST)
               ^DwarfCode:28: error: not found: value Direction
  setDirection(Direction.WEST)
               ^DwarfCode:47: error: not found: value Direction
  else setDirection(Direction.EAST)
                    ^DwarfCode:56: error: not found: value Direction
while (getDirection()!=Direction.EAST) droite()
                       ^